plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.107'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    maven {
        name = 'cursemaven'
        url = uri("https://www.cursemaven.com")
    }
    maven {
        name = "Modmaven"
        url = uri("https://modmaven.dev/")
    }
    maven {
        url = uri("https://maven.architectury.dev/")
    }
    maven {
        url = uri("https://maven.latvian.dev/releases/")
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
    }
    maven {
        name = "BlameJared"
        url = "https://maven.blamejared.com"
    }
    maven {
        name 'Thermal Maven'
        url 'https://maven.covers1624.net/'
    }
    maven {
        name = "TheIllusiveC4"
        url = "https://maven.theillusivec4.top/"
    }
    maven {
        name = "GeckoLib"
        url = "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/"
    }
    maven {
        name = "FTB"
        url = "https://maven.ftb.dev/releases"
    }
    maven {
        name = "Kotlin for Forge"
        url = "https://thedarkcolour.github.io/KotlinForForge/"
    }
    maven {
        url = uri("https://jitpack.io")
    }
    mavenCentral()
}

base {
    archivesName = mod_id
}

// Mojang ships Java 21 to end users in 1.21.1, so mods should target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()
            gameDirectory = project.file('run/client')
            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            jvmArguments.addAll '-Xmx3G', '-Xms3G'
        }

        server {
            server()
            gameDirectory = project.file('run/server')
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            jvmArguments.addAll '-Xmx3G', '-Xms3G'
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "mezz.jei:jei-1.21.1-neoforge:19.21.0.247"
    implementation "curse.maven:ae2-jei-integration-1074338:5748513"

    implementation "org.appliedenergistics:appliedenergistics2:19.2.16"
    implementation "org.appliedenergistics:guideme:2.5.1"
    implementation "de.mari_023:ae2wtlib_api:19.2.5"

    implementation "curse.maven:glodium-957920:5821676"
    implementation "curse.maven:ex-pattern-provider-892005:8025439"  // 2.2.32
    implementation "curse.maven:applied-flux-965012:5614830"
//    implementation "curse.maven:applied-flux-965012:7429565"

    // 高级ae
    implementation "software.bernie.geckolib:geckolib-neoforge-1.21.1:4.7.7"
    implementation "curse.maven:advancedae-1084104:7222372"
    implementation "curse.maven:ae2addonlib-1366135:7222312"

    implementation "curse.maven:ae2-crystal-science-1435174:8112039"
    implementation "curse.maven:ae2-lightning-tech-1527395:8410116"
    implementation "curse.maven:data-energistics-1565514:8217182"

    runtimeOnly "top.theillusivec4.curios:curios-neoforge:9.5.1+1.21.1"
    implementation "top.theillusivec4.curios:curios-neoforge:9.5.1+1.21.1:api"

    implementation "maven.modrinth:jade:15.1.2+neoforge"
    //龙之研究
    implementation "curse.maven:codechicken-lib-1-8-242818:7281427"
    implementation "curse.maven:brandons-core-231382:7130990"
    implementation "curse.maven:draconic-evolution-223565:7584459"

    
    runtimeOnly "de.mari_023:ae2wtlib:19.2.5"
    //任意门
    implementation "curse.maven:tempad-514923:6517779"
    implementation "curse.maven:resourceful-lib-570073:5973188"
    implementation "curse.maven:resourceful-config-714059:6467772"

    

    // 实用拓展
    implementation "maven.modrinth:actually-additions:1.3.22"
    // 工业先锋
    runtimeOnly "maven.modrinth:titanium:1.21-4.0.40"
    implementation "curse.maven:industrial-foregoing-266515:7073719"
    // 新生魔艺
    implementation "curse.maven:ars-nouveau-401955:8152094"

    implementation "mekanism:Mekanism:1.21.1-10.7.15.81"
    runtimeOnly "mekanism:Mekanism:1.21.1-10.7.15.81:generators"
    implementation "curse.maven:applied-mekanistics-574300:5978711"
    runtimeOnly "maven.modrinth:mekanism_extra:1.21.1-1.2.4"

    implementation "curse.maven:botany-pots-353928:7115287"
    implementation "curse.maven:bookshelf-228525:7115332"
    runtimeOnly "maven.modrinth:prickle:EE1FHDyD"

//    runtimeOnly "maven.modrinth:allthemodium:2.9.5"
    implementation "maven.modrinth:extendedae-plus:1.21.1-1.5.4.1"
//    runtimeOnly "maven.modrinth:omnitools:1.21.1-1.2.1"
//    runtimeOnly "curse.maven:ftb-ultimine-forge-386134:7188395"
    // 神秘农业
    implementation "curse.maven:cucumber-272335:8035802"
    implementation "curse.maven:mystical-agriculture-246640:8035819"

    // kjs
    runtimeOnly "dev.latvian.mods:rhino:2101.2.5-build.54"
    runtimeOnly "dev.latvian.mods:kubejs-neoforge:2101.7.1-build.188"

    runtimeOnly "curse.maven:ftb-library-forge-404465:7029003"
    runtimeOnly "dev.architectury:architectury-neoforge:13.0.8"
    runtimeOnly "dev.ftb.mods:ftb-teams-neoforge:2101.1.4"
    runtimeOnly "curse.maven:ftb-chunks-forge-314906:7157142"

    // 龙研
    compileOnly "com.brandon3055.brandonscore:BrandonsCore:1.21.1-3.2.1.309"
    compileOnly "com.brandon3055.draconicevolution:Draconic-Evolution:1.21.1-3.1.4.632"

//    compileOnly "maven.modrinth:gregtechceu-modern:mc1.21.1-7.0.1"

    runtimeOnly "maven.modrinth:configuration:6Mztfq1u"
    runtimeOnly "thedarkcolour:kotlinforforge-neoforge:5.11.0"
    runtimeOnly "curse.maven:just-enough-characters-250702:7320033"
    // apotheosis
//    implementation "dev.shadowsoffire:Placebo:1.21.1-9.6.3"
//    implementation "dev.shadowsoffire:ApothicAttributes:1.21.1-2.6.0"
//    implementation "dev.shadowsoffire:ApothicSpawners:1.21.1-1.2.0"
//    implementation "dev.shadowsoffire:ApothicEnchanting:1.21.1-1.3.0"
//    implementation "dev.shadowsoffire:Apotheosis:1.21.1-8.1.0"


    implementation fileTree(dir: 'libs', includes: ['*.jar'], excludes: [])
    compileOnly fileTree(dir: 'libs/compile', includes: ['*.jar'], excludes: [])
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
